added scheduled feedentry grabber to feed reader, but feedentries are not synchronized using the state of the db content